chore: Clean up tracked binary files and update .gitignore
- Remove Python cache files from git tracking
- Remove SQLite temporary files (.db-shm, .db-wal) from tracking
- Update .gitignore to exclude:
  - Python compiled files (__pycache__, *.pyc, *.pyo, *.pyd)
  - SQLite temporary files (*.db-shm, *.db-wal)
  - ConPort vector data directory
- Add project documentation files (AGENTS.md, CLAUDE.md, projectBrief.md)
- Update configuration and script files

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ logs/
 *.db
 *.sqlite
 *.sqlite3
+*.db-shm
+*.db-wal
 
 # Environment variables
 .env
@@ -53,3 +55,20 @@ coverage/
 # Temporary files
 tmp/
 temp/
+
+# Python compiled files
+__pycache__/
+*.py[cod]
+*$py.class
+*.pyo
+*.pyd
+.Python
+
+# Python binary files in context_portal
+context_portal/**/__pycache__/
+context_portal/**/*.py[cod]
+context_portal/**/*.pyo
+context_portal/**/*.pyd
+
+# ConPort vector data and embeddings
+context_portal/conport_vector_data/
